--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@
   height: 100%;
   justify-content: center;
   padding: 0 1rem;
+  box-shadow: 0px 0px 5px 5px rgba(100, 207, 255, 0.5);
 }
 
 #game-question {
@@ -54,6 +55,8 @@
   padding: 0 0.8rem;
   font-weight: 800;
   cursor: pointer;
+  border: none;
+  box-shadow: 0px 0px 5px 5px rgba(207, 207, 34, 0.5);
 }
 
 .game-answer:hover {
